--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <![endif]-->
     </head>
 
-    <body class="body" style="height: 1116px;">
+    <body class="body" style="height: 893px;">
         <div id="jsTopWrapper" class="top-wrapper top-wrapper--no-cta top-wrapper--no-promo" style="height:740px">
 
             <!--<div class="social social--top social--expanded jsSocialIcons" id="jsSocialIconsTop">
@@ -365,7 +365,7 @@
 
             <div class="cta cta--bottom jsCtaContainer"></div>
 
-            <div class="clearfix" style="width:1903px;height:276px"/>
+            <div class="clearfix"/>
 
             <div class="social social--bottom jsSocialIcons" id="jsSocialIconsBottom"></div>
 
