--- a/maulife/new/index.html
+++ b/maulife/new/index.html
@@ -19,13 +19,12 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE9" />
 <![endif]-->
 <link rel="icon" href="../favicon.ico" type="image/x-icon">
-<link rel="image_src" href="http://demo.rtcvid.net/securityfirst/css/images/social-icon-690x400.jpg" />
-<link rel="canonical" href="http://demo.rtcvid.net/securityfirst/new/" />
+
 <!-- Blueprint Framework CSS -->
-<link rel="stylesheet" href="C:/Users/user01/Desktop/maulife/CSS/blueprint-custom/screen.css?cb=1.1.20180424.2" type="text/css" media="screen, projection"/>
-<link rel="stylesheet" href="C:/Users/user01/Desktop/maulife/CSS/blueprint-custom/print.css?cb=1.1.20180424.2" type="text/css" media="print"/>
+<link rel="stylesheet" href="/maulife/CSS/blueprint-custom/screen.css?cb=1.1.20180424.2" type="text/css" media="screen, projection"/>
+<link rel="stylesheet" href="/maulife/CSS/blueprint-custom/print.css?cb=1.1.20180424.2" type="text/css" media="print"/>
 <!--[if lt IE 8]><link rel="stylesheet" href="css/blueprint-custom/ie.css?cb=1.1.20180424.2" type="text/css" media="screen, projection"/><![endif]-->
-<link rel="stylesheet" href="C:/Users/user01/Desktop/maulife/CSS/rtc.mobile-policyholder.css?cb=1.1.20180424.2" type="text/css"/>
+<link rel="stylesheet" href="/maulife/CSS/rtc.mobile-policyholder.css?cb=1.1.20180424.2" type="text/css"/>
 <!--[if lte IE 9]>
 <link rel="stylesheet" href="/securityfirst/css/securityfirst-ie9.css?cb=1.1.20180424.2" type="text/css"/>
 <![endif]-->
@@ -50,10 +49,10 @@
 		<a class="addthis_button_google_plusone" g:plusone:size="medium" g:plusone:annotation="none" style="float:none"></a>
 	</div>
 </div>
-<a class="addthis_button_linkedin" addthis:url="http://demo.rtcvid.net/securityfirst/new/?ls=linkedin&campaign=SM.Share" addthis:title="Security First Interactive Policyholder Video" addthis:description="Homeowners Insurance: The Movie. Watch and learn with entertaining animation."></a>
-<a class="addthis_button_email" addthis:url="http://demo.rtcvid.net/securityfirst/new/?campaign=SM.Share" addthis:title="Sharing this animated video with you."></a>
-<a class="addthis_button_twitter" addthis:url="http://demo.rtcvid.net/securityfirst/new/?ls=twitter&campaign=SM.Share" addthis:title="Whoa, I suddenly understand what an insurance policy really is. This animation rocks."></a>
-<a class="addthis_button_facebook" addthis:url="http://demo.rtcvid.net/securityfirst/new/?ls=facebook&campaign=SM.Share"></a> <!-- Look for OpenGraph fb tags in in head for facebook title and description -->
+<a class="addthis_button_linkedin" addthis:url="/manulife/new/?ls=linkedin&campaign=SM.Share" addthis:title="Security First Interactive Policyholder Video" addthis:description="Homeowners Insurance: The Movie. Watch and learn with entertaining animation."></a>
+<a class="addthis_button_email" addthis:url="/manulife/new/?campaign=SM.Share" addthis:title="Sharing this animated video with you."></a>
+<a class="addthis_button_twitter" addthis:url="/manulife/new/?ls=twitter&campaign=SM.Share" addthis:title="Whoa, I suddenly understand what an insurance policy really is. This animation rocks."></a>
+<a class="addthis_button_facebook" addthis:url="/manulife/new/?ls=facebook&campaign=SM.Share"></a> <!-- Look for OpenGraph fb tags in in head for facebook title and description -->
  <!-- dont show the add this button <a class="addthis_button_compact"></a> -->
 <!-- dont show the bubble count yet <a class="addthis_counter addthis_bubble_style"></a> -->
 </div>
@@ -194,7 +193,7 @@
 <div id="referral_name_mc" class="overlayDiv">REFERRAL NAME</div></div>
 		</div>
 	</div><div id="wrapper_container">
-	<div id="buffering_icon"><div id="loading-progress">00%</div><img src="/securityfirst/css/images/buffering(2).gif"/></div>
+	<div id="buffering_icon"><div id="loading-progress">00%</div><img src="/manulife/CSS/images/buffering(2).gif"/></div>
 	<div id="wrapper">
 		<div class="screenShadowWrapper">
 			<div id="wrapper_status_image" class="wrapperLoadingImage">
@@ -279,14 +278,14 @@
 <p class="translate">We're sorry, your browser or device is currently unsupported.</p>
 <p class="translate">Please make sure you have JavaScript enabled with either Flash Player or MP4 video playback support. <a class="help_fail" href="/securityfirst/help.html" target="_blank">More information.</a></p>
 <a class="flash_player_dl" href="http://www.adobe.com/go/getflashplayer" target="_blank">
-	<img alt="Get Adobe Flash Player" src="/securityfirst/css/images/get-adobe-flash-player.png">
+	<img alt="Get Adobe Flash Player" src="/manulife/CSS/images/get-adobe-flash-player.png">
 </a>
 <p class="translate">If you are unable to view the video try visiting this Web page using another browser or contact us for help at <a href="mailto:software.support@pb.com" target="_blank">software.support@pb.com</a>.
-			<img src="http://demo.rtcvid.net/securityfirst/css/images/noJavascript.gif?c=SECURITYFIRST&u=fv96v677mpq82&rn=1536916713000&s=START" width="1" height="1" alt="" />
+			<img src="/manulife/CSS/images/noJavascript.gif?c=SECURITYFIRST&u=fv96v677mpq82&rn=1536916713000&s=START" width="1" height="1" alt="" />
 		</div>
 	</div>
 </noscript>	<div id="card"></div>
-	<div id="loading_icon"><img src="/securityfirst/css/images/buffering.gif"/></div>
+	<div id="loading_icon"><img src="/manulife/CSS/images/buffering.gif"/></div>
 </div><script type="text/javascript">
 window.onerror = function( msg, url, line ) {
 	var sessionName = typeof RTCVisit != "undefined" ? RTCVisit.name : "fv96v677mpq82";
@@ -451,8 +450,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		};
 		head.appendChild(script);
 	}
-		    	getScript('/securityfirst/js/en/rtc.strings.js?cb=1.1.20180424.2',function(){
-		    	getScript('/securityfirst/js/rtc.mobile-policyholder.js?cb=1.1.20180424.2',function(){
+		    	getScript('/manulife/js/en/rtc.strings.js?cb=1.1.20180424.2',function(){
+		    	getScript('/manulife/js/rtc.mobile-policyholder.js?cb=1.1.20180424.2',function(){
 	});
 	});
 		  })();
